[package]
name = "mglua"
version = "0.8.6"
authors = ["Aleksandr Orlenko <zxteam@pm.me>", "kyren <catherine@chucklefish.org>", "Vurv78 <vurvdevelops@gmail.com>"]
edition = "2021"
repository = "https://github.com/Vurv78/mglua"
readme = "README.md"
keywords = ["lua", "glua", "luajit", "async", "scripting"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"
build = "build/main.rs"
description = """
High level bindings to Lua 5.4/5.3/5.2/5.1 (including LuaJIT)
with async/await features and support of writing native Lua modules in Rust.
"""

[package.metadata.docs.rs]
features = ["async", "send", "serialize", "macros", "parking_lot"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "mglua_derive",
]

[features]
lua51 = []
luajit = []
module = ["mglua_derive"]
async = ["futures-core", "futures-task", "futures-util"]
send = []
serialize = ["serde", "erased-serde", "serde-value"]
macros = ["mglua_derive/macros"]
unstable = []

default = ["luajit", "module"]

[dependencies]
mglua_derive = { version = "=0.8.0", optional = true, path = "mglua_derive" }
bstr = { version = "1.0", features = ["std"], default_features = false }
once_cell = { version = "1.0" }
num-traits = { version = "0.2.14" }
rustc-hash = "1.0"
futures-core = { version = "0.3.5", optional = true }
futures-task = { version = "0.3.5", optional = true }
futures-util = { version = "0.3.5", optional = true }
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }
serde-value = { version = "0.7", optional = true }
parking_lot = { version = "0.12", optional = true }

[build-dependencies]
winreg = "0.10.1"

[dev-dependencies]
rustyline = "10.0"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
trybuild = "1.0"
futures = "0.3.5"
hyper = { version = "0.14", features = ["client", "server"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures-timer = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0"
tempfile = "3"
static_assertions = "1.0"

[[bench]]
name = "benchmark"
harness = false
required-features = ["async"]

[[example]]
name = "async_http_client"
required-features = ["async", "macros"]

[[example]]
name = "async_http_reqwest"
required-features = ["async", "serialize", "macros"]

[[example]]
name = "async_http_server"
required-features = ["async", "macros"]

[[example]]
name = "async_tcp_server"
required-features = ["async", "macros"]

[[example]]
name = "guided_tour"
required-features = ["macros"]

[[example]]
name = "serialize"
required-features = ["serialize"]

[[example]]
name = "userdata"
required-features = ["macros"]
